tests/models/enum/named/i16/pass/default.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(default = 1)]
        value: i16
    },
}
fn main() {}
